# APIIntegration

DashboardAPI-EC/: .env.example  README.md  docker-compose.yml
DashboardAPI-EC/backend/: Dockerfile  pyproject.toml  requirements-worker.txt  requirements.txt
DashboardAPI-EC/backend/app/api/: router.py
DashboardAPI-EC/backend/app/api/routes/: appliances.py  orchestrators.py  samples.py
DashboardAPI-EC/backend/app/compatibility/: engine.py
DashboardAPI-EC/backend/app/compatibility/profiles/: edgeconnect-9.3.json  edgeconnect-9.4.json  edgeconnect-9.5.json  edgeconnect-9.6.json  edgeconnect-9.7.json
DashboardAPI-EC/backend/app/core/: security.py
DashboardAPI-EC/backend/app/models/: __init__.py  api_sample.py  appliance.py  orchestrator.py
DashboardAPI-EC/backend/app/schemas/: appliance.py  orchestrator.py  samples.py
DashboardAPI-EC/backend/app/services/: appliance_service.py  edgeconnect_client.py  orchestrator_service.py  sample_service.py  system_service.py
DashboardAPI-EC/backend/app/workers/: tasks.py
DashboardAPI-EC/backend/tests/: test_compatibility_engine.py  test_connection_parameters.py
DashboardAPI-EC/docs/ADR/: ADR-0002-real-api-samples.md
DashboardAPI-EC/docs/MTDS/: MTDS-0.1-Architecture.md  MTDS-0.2-Real-Data.md
DashboardAPI-EC/frontend/: Dockerfile
DashboardAPI-EC/frontend/src/: App.tsx
DashboardAPI-EC/frontend/src/components/: StatusChip.tsx
DashboardAPI-EC/frontend/src/lib/: api.ts
DashboardAPI-EC/scripts/: generate-compatibility-profiles.py  install-linux.sh
(+3 files in other folders)
